--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ packaging==23.1
 pathspec==0.11.1
 platformdirs==3.5.1
 pylint==2.17.4
+PyYAML==6.0
 tomli==2.0.1
 tomlkit==0.11.8
 typing_extensions==4.6.2
