--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
+idna==3.4
+isort==5.12.0
+iterable-etl==0.0.1rc2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mypy==1.3.0
+mypy-extensions==1.0.0
+numpy==1.24.3
+pandas==2.0.2
+py4j==0.10.9.7
+pyspark==3.4.0
+python-dateutil==2.8.2
+pytz==2023.3
 PyYAML==6.0
+requests==2.31.0
+six==1.16.0
+tomli==2.0.1
+types-PyYAML==6.0.12.10
+typing_extensions==4.6.3
+tzdata==2023.3
+urllib3==2.0.3
