--- a/setup.cfg
+++ b/setup.cfg
@@ -8,12 +8,12 @@ sign_tags = True
 description-file = README.md
 
 [bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:erdgen/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [mypy]
 ignore_missing_imports = True
