--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,146 @@
+agate==1.6.3
+alabaster==0.7.13
+appdirs==1.4.4
+argh==0.28.1
+arrow==1.2.3
 astroid==2.15.5
+attrs==22.2.0
+Babel==2.12.1
+binaryornot==0.4.4
+black==23.3.0
+bleach==6.0.0
+boto3==1.21.23
+botocore==1.24.46
 bump2version==1.0.1
+cachetools==5.3.0
 certifi==2023.5.7
+cffi==1.15.1
+cfgv==3.3.1
+chardet==5.1.0
 charset-normalizer==3.1.0
 click==8.1.3
+colorama==0.4.5
+cookiecutter==2.1.1
+coverage==4.5.4
+databricks-cli==0.17.7
+databricks-sql-connector==2.1.0
+dbt-core==1.3.0
+dbt-databricks==1.3.0
+dbt-extractor==0.4.1
+dbt-spark==1.3.1
+diff-cover==7.5.0
 dill==0.3.6
+distlib==0.3.6
+docutils==0.19
+entrypoints==0.3
+erdgen==0.0.1rc4
+exceptiongroup==1.1.1
+filelock==3.11.0
+flake8==3.7.8
+future==0.18.3
+google-api-core==2.11.0
+google-api-python-client==2.85.0
+google-auth==2.17.2
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+googleapis-common-protos==1.59.0
+hologram==0.0.15
+httplib2==0.22.0
+identify==2.5.24
 idna==3.4
+imagesize==1.4.1
+iniconfig==2.0.0
+isodate==0.6.1
 isort==5.12.0
 Jinja2==3.1.2
+jinja2-time==0.2.0
+jmespath==1.0.1
+jsonschema==3.2.0
 lazy-object-proxy==1.9.0
-MarkupSafe==2.1.3
+leather==0.3.4
+Logbook==1.5.3
+loguru==0.7.0
+MarkupSafe==2.1.2
+mashumaro==3.0.4
 mccabe==0.7.0
+minimal-snowplow-tracker==0.0.2
+msgpack==1.0.5
 mypy==1.3.0
 mypy-extensions==1.0.0
+networkx==2.8.8
+nodeenv==1.8.0
 numpy==1.24.3
+oauthlib==3.2.2
+packaging==23.1
 pandas==2.0.2
-platformdirs==3.5.3
+parsedatetime==2.4
+pathspec==0.11.1
+pathtools==0.1.2
+pip-system-certs==4.0
+pkginfo==1.9.6
+platformdirs==3.5.1
+pluggy==0.13.1
+pre-commit==2.12.0
+protobuf==4.22.1
+pure-sasl==0.6.2
+py==1.11.0
 py4j==0.10.9.7
+pyarrow==9.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+pycparser==2.21
+pyflakes==2.1.1
+Pygments==2.14.0
+PyHive==0.6.5
+PyJWT==2.7.0
 pylint==2.17.4
+pyparsing==3.0.9
+pyrsistent==0.19.3
+pytest==7.2.2
 python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-slugify==8.0.1
+pytimeparse==1.1.8
 pytz==2023.3
 PyYAML==6.0
+readme-renderer==37.3
+regex==2022.10.31
 requests==2.31.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.10.1
+rsa==4.9
+s3transfer==0.5.2
+sasl==0.3.1
+simple-settings==1.2.0
 six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==1.8.5
+sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-websupport==1.2.4
+sqlfluff==1.4.2
+sqlparams==5.0.0
+sqlparse==0.4.3
+tabulate==0.9.0
+tblib==1.7.0
+text-unidecode==1.3
+thrift==0.13.0
+thrift-sasl==0.4.3
+toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.8
-types-PyYAML==6.0.12.10
+tox==3.14.0
+tqdm==4.65.0
+twine==1.14.0
+types-requests==2.31.0.1
+types-urllib3==1.26.25.13
 typing_extensions==4.6.3
 tzdata==2023.3
-urllib3==2.0.3
+uritemplate==4.1.1
+urllib3==2.0.2
+virtualenv==20.21.0
+watchdog==0.9.0
+webencodings==0.5.1
+Werkzeug==2.2.3
 wrapt==1.15.0
+yamllint==1.29.0
